modify some link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: base
         <a href="{{ page.previous.url | prepend: site.baseurl }}" class="pre"><i class="icon-post-pre"> {{
             page.previous.title }}</i></a>
         {% endif %} {% if page.next %}
-        <a href="{{ page.next.url | prepend: site.baseur }}" class="next">{{ page.next.title }} <i
+        <a href="{{ page.next.url | prepend: site.baseurl }}" class="next">{{ page.next.title }} <i
                 class="icon-post-next"></i></a>
         {% endif %}
     </div>
