--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -62,14 +62,14 @@ Yet no award for you……
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | {{ site.subtitle}}</title>
 
     <!--live2d function-->
-    <script src="/assets/live2dw/lib/L2Dwidget.min.js"></script>
+    <script src="{{ '/assets/live2dw/lib/L2Dwidget.min.js' | prepend: site.baseurl }} "></script>
     <script>L2Dwidget.init({
         "pluginRootPath": "live2dw/",
         "pluginJsPath": "lib/",
         "pluginModelPath": "assets/",
         "tagMode": false,
         "debug": false,
-        "model": {"jsonPath": "/assets/live2dw/assets/unitychan.model.json"},
+        "model": {"jsonPath": "{{ '/assets/live2dw/assets/unitychan.model.json' | prepend: site.baseurl }} "},
         "display": {"position": "right", "width": 130, "height": 180, "hOffset": 60, "vOffset": -10,},
         "mobile": {"show": true, "scale": 1,},
         "log": false
@@ -86,17 +86,12 @@ Yet no award for you……
     <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/favicon.png">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "
-    /feed.xml" | prepend: site.baseurl }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" type="text/css" href="{{ "
-    /assets/css/normalize.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" type="text/css" href="{{ "
-    /assets/css/pure-min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" type="text/css" href="{{ "
-    /assets/css/grids-responsive-min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" type="text/css" href="{{ "
-    /assets/css/style.css?v=1514870841" | prepend: site.baseurl }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/normalize.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/pure-min.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/grids-responsive-min.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css?v=1514870841' | prepend: site.baseurl }}">
 
     <!--use mathJax to edit formulas in LaTex grammar.-->
     <script type="text/x-mathjax-config">
@@ -114,8 +109,8 @@ Yet no award for you……
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 
-    <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/assets/js/tongji.baidu.js"></script>
+    <script type="text/javascript" src="{{ '/assets/js/jquery.min.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/assets/js/tongji.baidu.js' | prepend: site.baseurl }}"></script>
 
 </head>
 
@@ -199,7 +194,7 @@ Yet no award for you……
     </div>
 
     <a id="rocket" href="#top" class="show"></a>
-    <script src="/assets/js/totop.js" type="text/javascript"></script>
+    <script src="{{ '/assets/js/totop.js' | prepend: site.baseurl }}" type="text/javascript"></script>
 </div>
 
 <!--{% include plugins/baidu_push %}-->
