--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -101,10 +101,6 @@ Yet no award for you……
               inlineMath: [['$','$']]
             }
           });
-
-
-
-
     </script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
@@ -184,8 +180,7 @@ Yet no award for you……
     <div id="footer">
         Copyright &copy; 2015-<span id="cur_year"></span> <a href="https://">Snownight22</a> - All Rights
         Reserved.
-        Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a
-            href="https://github.com/oukohou/oukohou.github.io" target="_blank">Github.com</a>
+        Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
         <script type="text/javascript">var cur_date = new Date();
         document.getElementById("cur_year").innerHTML = cur_date.getFullYear();</script>
         {% if site.beian %}
