--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,12 +40,13 @@ layout: base
         {{ content }}
     </div>
 
+    {% if site.donate.enable %}
     <div id="donate" >
         <a href="/donate/" style="text-decoration: none" title="点击直达打赏页面～" >
             <button>客官~对小店满意的话，<mark>赏个铜板</mark>再走啊🐼</button>
         </a>
     </div>
-
+    {% endif %}
 
     <div class="post-nav">
         {% if page.previous %}
@@ -63,6 +64,7 @@ layout: base
     <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
     <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 
+    <!--
     <p><br/>既已览卷至此，何不品评一二：</p>
     <div id="valine_comment" class="fb_comments_container"></div>
     <script>
@@ -83,6 +85,10 @@ layout: base
             avatar: '{{site.valine.avatar}}',
         });
     </script>
+    -->
+    {% if site.gitalk.enable %}
+    {% include comment.html %}
+    {% endif %}
 
 
 </article>
