--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,6 +23,7 @@ Yet no award for you……
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!--
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130856615-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -35,9 +36,11 @@ Yet no award for you……
 
         gtag('config', 'UA-130856615-1');
     </script>
+    -->
 
 
     <!-- Google Tag Manager -->
+    <!--
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({
@@ -51,6 +54,7 @@ Yet no award for you……
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-PW3MXPD');</script>
+    -->
     <!-- End Google Tag Manager -->
 
 
@@ -62,6 +66,7 @@ Yet no award for you……
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | {{ site.subtitle}}</title>
 
     <!--live2d function-->
+    {% if site.live2D.enable %}
     <script src="{{ '/assets/live2dw/lib/L2Dwidget.min.js' | prepend: site.baseurl }} "></script>
     <script>L2Dwidget.init({
         "pluginRootPath": "live2dw/",
@@ -74,13 +79,13 @@ Yet no award for you……
         "mobile": {"show": true, "scale": 1,},
         "log": false
     });</script>
-
+    {% endif %}
 
     <meta name="keywords"
           content="{% if page.keywords %}{{ page.keywords | split: ' ' | join: ', ' }}{% else %}{{ site.keywords }}{% endif %}">
     <meta name="description"
           content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="baidu-site-verification" content="fjE6fa4d3J"/>
+    <meta name="baidu-site-verification" content=""/>
     <meta name="author" content="{{ site.author }}">
 
     <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.png">
@@ -113,10 +118,12 @@ Yet no award for you……
 <body>
 
 <!-- Google Tag Manager (noscript) -->
+<!--
 <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PW3MXPD"
             height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
+-->
 <!-- End Google Tag Manager (noscript) -->
 
 
@@ -188,8 +195,10 @@ Yet no award for you……
         {% endif %}
     </div>
 
+    {% if site.live2D.rocket %}
     <a id="rocket" href="#top" class="show"></a>
     <script src="{{ '/assets/js/totop.js' | prepend: site.baseurl }}" type="text/javascript"></script>
+    {% endif %}
 </div>
 
 <!--{% include plugins/baidu_push %}-->
