--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,13 +25,20 @@ layout: base
             </i>
         </span>{% endif %}
 
-
+            <!-- 不算子阅读量统计-->
+            <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+            </script>
+            <span id="busuanzi_container_page_pv">
+              阅读量<span id="busuanzi_value_page_pv"></span>次
+            </span>
             <!-- 阅读量统计， id 将作为查询条件 -->
+            <!--
             <span id={{page.url}} class="leancloud-visitors" data-flag-title={{page.title}}>
                 <span class="post-meta-divider">|</span>
                 <span class="post-meta-item-text">阅读量 </span>
                 <span class="leancloud-visitors-count"></span>
             </span>
+            -->
         </p>
 
     </header>
@@ -64,7 +71,7 @@ layout: base
     <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
     <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 
-    <!--
+    {% if site.valine.enable %}
     <p><br/>既已览卷至此，何不品评一二：</p>
     <div id="valine_comment" class="fb_comments_container"></div>
     <script>
@@ -85,7 +92,7 @@ layout: base
             avatar: '{{site.valine.avatar}}',
         });
     </script>
-    -->
+    {% endif %}
     {% if site.gitalk.enable %}
     {% include comment.html %}
     {% endif %}
