--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -89,8 +89,8 @@ Yet no award for you……
     <meta name="author" content="{{ site.author }}">
 
     <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="/favicon.png">
+    <link rel="apple-touch-icon" href="{{ '/favicon.jpg' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon-precomposed" href="{{ '/favicon.jpg' | prepend: site.baseurl }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}">
 
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/normalize.css' | prepend: site.baseurl }}">
