modify donate and others

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@ layout: base
 
     {% if site.donate.enable %}
     <div id="donate" >
-        <a href="/donate/" style="text-decoration: none" title="点击直达打赏页面～" >
+        <a href="{{'/donate/' | prepend:site.baseurl }}" style="text-decoration: none" title="点击直达打赏页面～" >
             <button>客官~对小店满意的话，<mark>赏个铜板</mark>再走啊🐼</button>
         </a>
     </div>
