--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,9 +290,9 @@ a:focus {
 }
 
 .post .post-content hr {
-    margin: 2.4em auto;
+    margin: 0px auto;
     border: none;
-    border-top: 1px solid #eee;
+    border-top: 1px solid #C2C2C2;
     position: relative;
 }
 
