--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -88,7 +88,7 @@ Yet no award for you……
     <meta name="baidu-site-verification" content=""/>
     <meta name="author" content="{{ site.author }}">
 
-    <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.png">
+    <link rel="Shortcut Icon" type="image/x-icon" href="{{ '/favicon.jpg' | prepend: site.baseurl }}">
     <link rel="apple-touch-icon" href="{{ '/favicon.jpg' | prepend: site.baseurl }}">
     <link rel="apple-touch-icon-precomposed" href="{{ '/favicon.jpg' | prepend: site.baseurl }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}">
