--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1203,22 +1203,25 @@ figure {
 
 /* table */
 table {
-    margin: auto auto 15px;
-    width: 100%;
+    margin: auto auto 15px 0px;
+    /*width: 100%;*/
     background: transparent;
     border-collapse: collapse;
     border-spacing: 0;
     text-align: left;
+    border:1px solid #909ba2;
 }
 
 table th {
     font-weight: bold;
     padding: 5px 10px;
+    border:1px solid #909ba2;
     border-bottom: 2px solid #909ba2;
 }
 
 table td {
     padding: 5px 10px;
+    border:1px solid #909ba2;
 }
 
 table tr:nth-child(2n) {
