--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/gitalk.css">
+<script src="{{ site.baseurl }}/assets/js/gitalk.min.js"></script> 
 <script src="{{ site.baseurl }}/assets/js/md5.min.js"></script>
 
 <div id="gitalk-container"></div>     
