--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,3 +1,7 @@
+<!--
+<link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+-->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/gitalk.css">
 <script src="{{ site.baseurl }}/assets/js/gitalk.min.js"></script> 
 <script src="{{ site.baseurl }}/assets/js/md5.min.js"></script>
