add new post list

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -177,6 +177,8 @@ Yet no award for you……
                 {% include widgets/category_list %}
 
                 {% include widgets/star_post_list %}
+                
+                {% include widgets/new_post_list %}
 
                 {% include widgets/codehub_list %}
 
