--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -97,6 +97,8 @@ layout: base
     {% include comment.html %}
     {% endif %}
 
+    {% include copyright.html %}
+
     {% if site.leanCloud.enable %}
     {% include readerStatistics %}
     <script>
