--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1264,3 +1264,23 @@ ul {
 }
 
 }
+
+.div-copyright {
+    margin: 0em 8em 0em;
+    padding: 0em 0em;
+}
+
+.post-copyright {
+    font-size: 14px;
+    line-height: 1.77;
+    margin: 2em 0 0;
+    padding: 0.5em 1em;
+    border-left: 3px solid #44683f;
+    background-color: #f9f9f9;
+    list-style: none;
+}
+
+.post-copyright-license {
+    margin: 0.5em 0 0;
+}
+  
